--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,10 +15,10 @@ layout: default
       {%- for post in site.posts -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
+				<span class="post-meta"><span class="book-name">{{ post.book }}</span> - {{ post.date | date: date_format }}</span>
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
-            {{ post.title | escape }}
+						{{ post.title | escape }}
           </a>
         </h3>
         {%- if site.show_excerpts -%}
